--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="login"></div>
+    <div id="stocks"></div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
